# samsara

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  demo-sky.sh  install.sh
.github/workflows/: ci.yml  release.yml
src/: authfile.rs  cli.rs  config.rs  doctor.rs  fsx.rs  history.rs  keystore.rs  local.rs  main.rs  model.rs  notify.rs  paths.rs  rotor.rs  secrets.rs  service.rs  ui.rs  update.rs  watcher.rs  zen.rs
