[package]
name = "samsara"
version = "0.1.1"
edition = "2024"
description = "Auto-rotating opencode Zen API-key supervisor — swaps keys when one hits its usage limit."
authors = ["Vishal Makwana"]
license = "MIT"
repository = "https://github.com/vishalmakwana111/samsara"
homepage = "https://github.com/vishalmakwana111/samsara"
readme = "README.md"
keywords = ["opencode", "zen", "api-key", "rotation", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
eventsource-stream = "0.2.3"
futures-util = "0.3.32"
humantime = "2.4.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "signal", "time", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Signals (SIGTERM to reload the opencode daemon) are Unix-only.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["signal"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
